# ImPres

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  LICENSE  README.md  impres-icons-concept.ai
apps/: CMakeLists.txt
apps/CaptureTester/: CMakeLists.txt  main.cpp  run_Capture_Webcam.bat  xform.vert
apps/DomePres/: BGR24LuminanceSource.h  CMakeLists.txt  Capture.hpp  FFmpegCapture.cpp  README.md  dome_gamma.xml  fisheye.xml  flip.vert  main.cpp  openvr.xml  run_Capture_DatapathDVIDL.bat  run_Capture_Webcam.bat  run_Capture_Webcam_DP2Ganged_two_nodes.bat  run_Capture_Webcam_two_nodes.bat  run_DVI2USB.bat  run_DVI2USB_DataPathDP2_twinfisheye.bat  run_openvr_DVI2USB.bat  run_two_nodes.bat  run_two_nodes_Capture_Webcam_3same.bat  run_two_nodes_DVI2USB.bat  run_two_nodes_DVI2USB_1fisheye.bat  run_two_nodes_DVI2USB_3same.bat  run_two_nodes_DVI2USB_DataPathDP2_twinfisheye.bat  run_two_nodes_DatapathDVIDL.bat  run_two_nodes_openvr_DVI2USB.bat  textureblend.frag  two_nodes.xml  xform.frag
apps/ImPresDomeViewer/: BGR24LuminanceSource.cpp  BGR24LuminanceSource.h  CMakeLists.txt  Capture.cpp  QRCodeInterpreter.cpp  QRCodeInterpreter.h  TwinCapture.cpp  TwinCapture.hpp  chromakey.frag  dome_gamma.xml  main.cpp  run_DVI2USB.bat  run_openvr_DVI2USB.bat  run_two_nodes.bat  run_two_nodes_DVI2USB_1fisheye.bat  run_two_nodes_DVI2USB_3same.bat  xform.frag
apps/ImPresDomeViewer/user_cmake/Modules/: FindZXing.cmake
shared/: FFmpegCapture.cpp  FFmpegCapture.hpp  QRCodeInterpreter.cpp  RGBEasyCaptureCPU.cpp  RGBEasyCaptureCPU.hpp  RGBEasyCaptureGPU.cpp  RGBEasyCaptureGPU.hpp
